troubleshooting adding a database entry

--- a/frontend.html
+++ b/frontend.html
@@ -76,8 +76,8 @@
 
     <!--  functions for frontend -->
     <script>
-        // heroku app 
-        const API_URL = 'https://yogastudio-6552649465ad.herokuapp.com/';
+        
+        const API_URL = '';
         
         //  show or hide the tasb
         function showTab(tab) {
